Added comments for headers, list and relative images

--- a/food_recipes/candied_bites.html
+++ b/food_recipes/candied_bites.html
@@ -7,14 +7,19 @@
     <title>Candied Bites</title>
 </head>
 <body>
+    <!--
+        page header and image import
+    -->
     <h1>How To Make <strong>Candied Bites</strong></h1>
     <img src="./images/Candied.jpg" alt="Candied Bites">
 </body>
 <body>
+    <!--
+        sub-header for description, unordered list of ingredients, ordered list of steps
+    -->
     <h2>Description</h2>
     <p>Inspired by @vics_tricks_to on TikTok, we're sharing the tastiest new take on classic kielbasa. 
         Double-baked in a brown sugar and mustard glaze, these sweet and smoky sausage bites are a crowd-pleasing new take on little smokies.</p>
-    
     <h2><em>Ingredients</em></h2>  
     <ul>
         <li>
