--- a/food_recipes/meatball_sliders.html
+++ b/food_recipes/meatball_sliders.html
@@ -7,10 +7,16 @@
     <title>Meatball Sliders</title>
 </head>
 <body>
+    <!--
+        page header and relative image import
+    -->
     <h1>How To Make<i> Meatball Sliders</i></h1>
     <img src="./images/meatball.jpg" alt="Meatball Sliders">
 </body>
 <body>
+    <!--
+        sub-header for description, unordered list of ingredients, ordered list of steps
+    -->
     <h2>Description</h2>
     <p>
         These BBQ meatball sliders on Hawaiian rolls that will be the hit of the party!  
