--- a/food_recipes/sushi.html
+++ b/food_recipes/sushi.html
@@ -7,10 +7,16 @@
     <title>Guide</title>
 </head>
 <body>
+    <!--
+        page header and relative image import
+    -->
     <h1>Step By Step Guide On How To Make <i>Sushi</i></h1>
     <img src="./images/sushi.jpg" alt="Unfinished Sushi Image">
 </body>
 <body>
+    <!--
+        sub-header for description, unordered list of ingredients, ordered list of steps
+    -->
     <h2>Description</h2>
     <p>
         Sushi rolls can be filled with any ingredients you choose. Try smoked salmon instead of imitation crabmeat. 
@@ -41,6 +47,4 @@
         <li>Use a wet, sharp knife to cut each roll into 4 to 6 slices.</li>
     </ol>
 </body>    
-
-
 </html>
