--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Food Recipes</title>
 </head>
 <body>
+    <!--page header and relative links to the other recipe pages-->
     <h1>Food Recipes Practice</h1>
     <ul>
         <li>
